Reconstruct Java guide documentation